unpackaged/main/default/objects/IndividualApplication/fields/Grantee_Org_Main_Email__c.field-meta.xml
<CustomField>
    <fullName>Grantee_Org_Main_Email__c</fullName>
    <description>Main email for grantee to which this grants is given. Copied by automation from the parent Account/Org record. In turn copied down to grantee report and payment records. Included in report reminders and payment notifications.</description>
    <inlineHelpText>Main email for grantee to which this grants is given. Copied by automation from the parent Account/Org record. In turn copied down to grantee report and payment records. Included in report reminders and payment notifications.</inlineHelpText>
    <label>Grantee Org Main Email</label>
    <type>Email</type>
</CustomField>