unpackaged/main/default/objects/IndividualApplication/fields/Grants_Manager__c.field-meta.xml
<CustomField>
    <fullName>Grants_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The GM representative responsible for administrative aspects of this grant.</inlineHelpText>
    <label>Grants Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Individual_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>