unpackaged/main/default/objects/IndividualApplication/fields/Is_Multiyear_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Is_Multiyear_Proposal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if multi-year proposal.</description>
    <inlineHelpText>Check if multi-year proposal.</inlineHelpText>
    <label>Is Multiyear Proposal?</label>
    <type>Checkbox</type>
</CustomField>