unpackaged/main/default/objects/IndividualApplication/fields/Issue_Area__c.field-meta.xml
<CustomField>
    <fullName>Issue_Area__c</fullName>
    <description>Corresponds with current AJWS program structure (CPR, NRR, SHR, Disaster)</description>
    <inlineHelpText>Corresponds with current AJWS program structure (CPR, NRR, SHR, Disaster)</inlineHelpText>
    <label>Legacy Issue Area</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sexual health and rights</fullName>
            </value>
            <value>
                <fullName>Natural resource rights and economic justice</fullName>
            </value>
            <value>
                <fullName>Civil and political rights</fullName>
            </value>
            <value>
                <fullName>Disaster response</fullName>
            </value>
            <value>
                <fullName>Pre-2015 Record</fullName>
            </value>
            <value>
                <fullName>(Old) Conflicts and Emergencies</fullName>
            </value>
            <value>
                <fullName>Civil Society</fullName>
            </value>
            <value>
                <fullName>Women&#39;s Empowerment</fullName>
            </value>
            <value>
                <fullName>(Old) Community Health</fullName>
            </value>
            <value>
                <fullName>(Old) Community Voice</fullName>
            </value>
            <value>
                <fullName>(Old) Education for All</fullName>
            </value>
            <value>
                <fullName>(Old) Sustainable Livelihoods</fullName>
            </value>
            <value>
                <fullName>Other (Donor-Advised/Discretionary Only)</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>