unpackaged/main/default/objects/IndividualApplication/fields/Language_Preference__c.field-meta.xml
<CustomField>
    <fullName>Language_Preference__c</fullName>
    <description>Language Preference indicated on the Grantee&#39;s Org record.</description>
    <formula>TEXT(Account.Language_Preference__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Language Preference indicated on the Grantee&#39;s Org record.</inlineHelpText>
    <label>Language Preference</label>
    <type>Text</type>
</CustomField>