unpackaged/main/default/objects/IndividualApplication/fields/Lobbying__c.field-meta.xml
<CustomField>
    <fullName>Lobbying__c</fullName>
    <inlineHelpText>Lobbying?</inlineHelpText>
    <label>Lobbying</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>