unpackaged/main/default/objects/IndividualApplication/fields/Multiyear_Proposal_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Multiyear_Proposal_End_Date__c</fullName>
    <description>Enter Multiyear Proposal End Date</description>
    <inlineHelpText>Enter Multiyear Proposal End Date</inlineHelpText>
    <label>Multiyear Proposal End Date</label>
    <type>Date</type>
</CustomField>