unpackaged/main/default/objects/IndividualApplication/fields/Multiyear_Proposal_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Multiyear_Proposal_Start_Date__c</fullName>
    <description>Multiyear Proposal Start Date</description>
    <inlineHelpText>Enter Multiyear Proposal Start Date.</inlineHelpText>
    <label>Multiyear Proposal Start Date</label>
    <type>Date</type>
</CustomField>