unpackaged/main/default/objects/IndividualApplication/fields/Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps__c</fullName>
    <label>Next Steps</label>
    <length>30000</length>
    <type>Html</type>
</CustomField>