unpackaged/main/default/objects/IndividualApplication/fields/Org_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Org_Contribution__c</fullName>
    <description>C7 on Project proposal</description>
    <inlineHelpText>List the changes you will seek to accomplish over the next three years as a result of your efforts? (Include a maximum of 5 changes)</inlineHelpText>
    <label>Org Contribution</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>