unpackaged/main/default/objects/IndividualApplication/fields/Org_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Org_Evaluation__c</fullName>
    <description>C10 on Project proposal</description>
    <inlineHelpText>If your organization has evaluated its work, describe the most recent evaluation. If applicable, provide one example of how the evaluation changed the way your organization does its work. (1 to 3 paragraphs).</inlineHelpText>
    <label>Org Evaluation</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>