unpackaged/main/default/objects/IndividualApplication/fields/Org_Experience_in_Community__c.field-meta.xml
<CustomField>
    <fullName>Org_Experience_in_Community__c</fullName>
    <inlineHelpText>Relates to emergency-crisis grants</inlineHelpText>
    <label>Org Experience in Community</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>