unpackaged/main/default/objects/IndividualApplication/fields/Org_Experience_with_Relief_Work__c.field-meta.xml
<CustomField>
    <fullName>Org_Experience_with_Relief_Work__c</fullName>
    <inlineHelpText>Relates to emergency-crisis grants</inlineHelpText>
    <label>Org Experience with Relief Work</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>