unpackaged/main/default/objects/IndividualApplication/fields/Org_Goals__c.field-meta.xml
<CustomField>
    <fullName>Org_Goals__c</fullName>
    <description>C8 on Project proposal</description>
    <inlineHelpText>List your organization’s priorities over the next 12 months. Include organizational development projects, if applicable.</inlineHelpText>
    <label>Org Goals</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>