unpackaged/main/default/objects/IndividualApplication/fields/Org_Individual_Name_on_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Org_Individual_Name_on_Bank_Account__c</fullName>
    <description>Org/Individual Name on Bank Account</description>
    <inlineHelpText>Enter Org/Individual Name on Bank Account.</inlineHelpText>
    <label>Org/Individual Name on Bank Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>