unpackaged/main/default/objects/IndividualApplication/fields/Org_Monitoring__c.field-meta.xml
<CustomField>
    <fullName>Org_Monitoring__c</fullName>
    <description>C9 on Project proposal</description>
    <inlineHelpText>How will you assess progress (successes and challenges) toward these changes? Describe any monitoring and evaluation processes that you currently use including types of data that you regularly collect and timeframe for data collection. (1 to 2 paragraphs)</inlineHelpText>
    <label>Org Monitoring</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>