unpackaged/main/default/objects/IndividualApplication/fields/Org_obstacles__c.field-meta.xml
<CustomField>
    <fullName>Org_obstacles__c</fullName>
    <description>C6 on Project proposal</description>
    <inlineHelpText>In the past few years, what challenges, setbacks or failures have you experienced toward achieving your mission? Setbacks can include changes in your organization or changes in social, political or economic contexts.
(1 to 2 paragraphs)</inlineHelpText>
    <label>Org Obstacles</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>