unpackaged/main/default/objects/IndividualApplication/fields/Org_Population_and_Problem__c.field-meta.xml
<CustomField>
    <fullName>Org_Population_and_Problem__c</fullName>
    <description>C3 in Project proposal</description>
    <inlineHelpText>What are the main problems you are seeking to address and how do they impact the communities with whom you work? Describe the causes of the problem(s) you are addressing. (2 to 4 paragraphs)</inlineHelpText>
    <label>Org Population and Problem</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>