unpackaged/main/default/objects/IndividualApplication/fields/Org_Problems_strategies__c.field-meta.xml
<CustomField>
    <fullName>Org_Problems_strategies__c</fullName>
    <description>C4 on Project proposal</description>
    <inlineHelpText>What strategies or approaches does your organization use to address these problems? (1 to 4 paragraphs)</inlineHelpText>
    <label>Org Problems Strategies</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>