unpackaged/main/default/objects/IndividualApplication/fields/Org_Recent_success__c.field-meta.xml
<CustomField>
    <fullName>Org_Recent_success__c</fullName>
    <description>C5 on Project proposal</description>
    <inlineHelpText>In the past few years, what progress has your organization made toward achieving its mission? (1 to 2 paragraphs)</inlineHelpText>
    <label>Org Recent Success</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>