unpackaged/main/default/objects/IndividualApplication/fields/Organization_Address__c.field-meta.xml
<CustomField>
    <fullName>Organization_Address__c</fullName>
    <formula>Account.BillingStreet &amp;
IF(Account.BillingCity =&quot;&quot;,
&quot;&quot;, &quot;, &quot; &amp; Account.BillingCity) &amp;
IF(Account.BillingState=&quot;&quot;,
&quot;&quot;, &quot;, &quot; &amp; Account.BillingState) &amp;
&quot; &quot; &amp; Account.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Organization Address</label>
    <type>Text</type>
</CustomField>