unpackaged/main/default/objects/IndividualApplication/fields/Organization_Alert__c.field-meta.xml
<CustomField>
    <fullName>Organization_Alert__c</fullName>
    <description>Formula field to display the alert text from the organization.</description>
    <formula>Account.Alert_Text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Organization alert text (carried over from the organization record).</inlineHelpText>
    <label>Organization Alert</label>
    <type>Text</type>
</CustomField>