unpackaged/main/default/objects/IndividualApplication/fields/Organization_Name_text__c.field-meta.xml
<CustomField>
    <fullName>Organization_Name_text__c</fullName>
    <formula>Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Organization Name</label>
    <type>Text</type>
</CustomField>