unpackaged/main/default/objects/IndividualApplication/fields/Organization_s_Preferred_Language__c.field-meta.xml
<CustomField>
    <fullName>Organization_s_Preferred_Language__c</fullName>
    <formula>TEXT(Account.Language_Preference__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Organization&#39;s Preferred Language</label>
    <type>Text</type>
</CustomField>