unpackaged/main/default/objects/IndividualApplication/fields/Other_Methodology_Details__c.field-meta.xml
<CustomField>
    <fullName>Other_Methodology_Details__c</fullName>
    <description>If you selected &quot;Other&quot; for &#39;Methodology&#39;, please add details.</description>
    <inlineHelpText>If you selected &quot;Other&quot; for &#39;Methodology&#39;, please add details.</inlineHelpText>
    <label>Other Methodology Details</label>
    <type>TextArea</type>
</CustomField>