unpackaged/main/default/objects/IndividualApplication/fields/PO_Comments__c.field-meta.xml
<CustomField>
    <fullName>PO_Comments__c</fullName>
    <description>For Program Officers to leave comments or notes on this grant for future reference.</description>
    <inlineHelpText>For Program Officers to leave comments or notes on this grant for future reference.</inlineHelpText>
    <label>PO Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>