unpackaged/main/default/objects/IndividualApplication/fields/Primary_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_ID__c</fullName>
    <description>Salesforce ID for the Primary Contact on the opportunity record.</description>
    <formula>Contact.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Salesforce ID for the Primary Contact on the opportunity record.</inlineHelpText>
    <label>Primary Contact ID</label>
    <type>Text</type>
</CustomField>