unpackaged/main/default/objects/IndividualApplication/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Lead Department (Issue Area) for this grant/request</inlineHelpText>
    <label>Program Director Area</label>
    <referenceTo>Program</referenceTo>
    <relationshipLabel>Individual Applications</relationshipLabel>
    <relationshipName>Individual_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>