unpackaged/main/default/objects/IndividualApplication/fields/Project_Activities__c.field-meta.xml
<CustomField>
    <fullName>Project_Activities__c</fullName>
    <inlineHelpText>List and describe the key activities you will conduct with this grant.</inlineHelpText>
    <label>Project Activities</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>