unpackaged/main/default/objects/IndividualApplication/fields/Project_Activities_Grant_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Project_Activities_Grant_Agreement__c</fullName>
    <inlineHelpText>Please enter the project activities as they should appear on the grant agreement.</inlineHelpText>
    <label>Project Activities - Grant Agreement</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>