unpackaged/main/default/objects/IndividualApplication/fields/Project_Need__c.field-meta.xml
<CustomField>
    <fullName>Project_Need__c</fullName>
    <inlineHelpText>What is the need or opportunity being addressed by the project for which you are seeking funding?</inlineHelpText>
    <label>Project Need</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>