unpackaged/main/default/objects/IndividualApplication/fields/Project_Results__c.field-meta.xml
<CustomField>
    <fullName>Project_Results__c</fullName>
    <description>D3 on Project proposal</description>
    <inlineHelpText>List the results or impact that you expect from these project activities by the end of the grant period. For each result, explain how you will demonstrate that it was achieved.</inlineHelpText>
    <label>Project Results</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>