unpackaged/main/default/objects/IndividualApplication/fields/Project_Title__c.field-meta.xml
<CustomField>
    <fullName>Project_Title__c</fullName>
    <inlineHelpText>A brief, public facing title/description of the grant</inlineHelpText>
    <label>Project Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>