unpackaged/main/default/objects/IndividualApplication/fields/Project_Title_Grantee_Language__c.field-meta.xml
<CustomField>
    <fullName>Project_Title_Grantee_Language__c</fullName>
    <inlineHelpText>A brief, public facing title/description of the grant, in the grantee&#39;s language.</inlineHelpText>
    <label>Project Title - Grantee Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>