unpackaged/main/default/objects/IndividualApplication/fields/Rationale__c.field-meta.xml
<CustomField>
    <fullName>Rationale__c</fullName>
    <inlineHelpText>Grant rationale for the docket.</inlineHelpText>
    <label>Rationale</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>