unpackaged/main/default/objects/IndividualApplication/fields/Ready_to_submit__c.field-meta.xml
<CustomField>
    <fullName>Ready_to_submit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to determine if all required fields have been populated before submission for grant/request approval (i.e. aggregates entry criteria for grant approval)</description>
    <inlineHelpText>Used to determine if all required fields have been populated before submission for grant/request approval (i.e. aggregates entry criteria for grant approval)</inlineHelpText>
    <label>Ready to submit</label>
    <type>Checkbox</type>
</CustomField>