unpackaged/main/default/objects/IndividualApplication/fields/Record_Locked__c.field-meta.xml
<CustomField>
    <fullName>Record_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used to prevent changing stages and updates to the request. Set via approval process.</inlineHelpText>
    <label>Record Locked</label>
    <type>Checkbox</type>
</CustomField>