unpackaged/main/default/objects/IndividualApplication/fields/Regranting__c.field-meta.xml
<CustomField>
    <fullName>Regranting__c</fullName>
    <description>Regranting For DAF.</description>
    <inlineHelpText>Regranting For DAF.</inlineHelpText>
    <label>Regranting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>