unpackaged/main/default/objects/IndividualApplication/fields/Regranting_in_the_US__c.field-meta.xml
<CustomField>
    <fullName>Regranting_in_the_US__c</fullName>
    <inlineHelpText>Regranting in the US for DAF.</inlineHelpText>
    <label>Regranting in the US</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>