unpackaged/main/default/objects/IndividualApplication/fields/Rejection_Comments__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Comments__c</fullName>
    <description>Grant/request Rejection Comments.</description>
    <inlineHelpText>Grant/request Rejection Comments.</inlineHelpText>
    <label>Rejection Comments</label>
    <type>TextArea</type>
</CustomField>