unpackaged/main/default/objects/IndividualApplication/fields/Rejection_Type__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Type__c</fullName>
    <description>Select whether grant is rejected or should be sent back for revisions.</description>
    <inlineHelpText>Select whether grant is rejected or should be sent back for revisions.</inlineHelpText>
    <label>Rejection Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Send Back for Revisions</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>