unpackaged/main/default/objects/IndividualApplication/fields/Setting__c.field-meta.xml
<CustomField>
    <fullName>Setting__c</fullName>
    <description>Select Urban, Peri-Urban or Rural.</description>
    <inlineHelpText>Select Urban, Peri-Urban or Rural.</inlineHelpText>
    <label>Setting</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Urban</fullName>
            </value>
            <value>
                <fullName>Peri-Urban</fullName>
            </value>
            <value>
                <fullName>Rural</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>