unpackaged/main/default/objects/IndividualApplication/fields/SharePoint_Library_URL__c.field-meta.xml
<CustomField>
    <fullName>SharePoint_Library_URL__c</fullName>
    <description>Used in FC to link SharePoint folder with its matching Request record.</description>
    <inlineHelpText>Used in FC to link SharePoint folder with its matching Request record.</inlineHelpText>
    <label>SharePoint Library URL</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>