unpackaged/main/default/objects/IndividualApplication/fields/Signatory_at_Fiscal_Agent_Organization__c.field-meta.xml
<CustomField>
    <fullName>Signatory_at_Fiscal_Agent_Organization__c</fullName>
    <description>Please enter the name of the Signatory at Fiscal Agent Organization.</description>
    <inlineHelpText>Please enter the name of the Signatory at Fiscal Agent Organization.</inlineHelpText>
    <label>Signatory at Fiscal Agent Organization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>