unpackaged/main/default/objects/IndividualApplication/fields/Signatory_s_Title_at_Fiscal_Agent_Org__c.field-meta.xml
<CustomField>
    <fullName>Signatory_s_Title_at_Fiscal_Agent_Org__c</fullName>
    <description>Please enter the title of the Signatory at Fiscal Agent Org.</description>
    <inlineHelpText>Please enter the title of the Signatory at Fiscal Agent Org.</inlineHelpText>
    <label>Signatory’s Title at Fiscal Agent Org</label>
    <length>120</length>
    <type>Text</type>
</CustomField>