unpackaged/main/default/objects/IndividualApplication/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <inlineHelpText>Enter the start date for the grant period.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>