unpackaged/main/default/objects/IndividualApplication/fields/System_Alert__c.field-meta.xml
<CustomField>
    <fullName>System_Alert__c</fullName>
    <label>System Alert</label>
    <length>255</length>
    <type>Text</type>
</CustomField>