unpackaged/main/default/objects/IndividualApplication/fields/Total_Multiyear_Proposal_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Multiyear_Proposal_Amount__c</fullName>
    <description>Total Multiyear Proposal Amount in USD.</description>
    <inlineHelpText>Total Multiyear Proposal Amount in USD.</inlineHelpText>
    <label>Total Multiyear Proposal Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>