unpackaged/main/default/objects/IndividualApplication/fields/US_Activities_Amount__c.field-meta.xml
<CustomField>
    <fullName>US_Activities_Amount__c</fullName>
    <description>Value of US Activities.</description>
    <inlineHelpText>Value of US Activities.</inlineHelpText>
    <label>US Activities Amount</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>