unpackaged/main/default/objects/IndividualApplication/fields/US_Activities_Flag__c.field-meta.xml
<CustomField>
    <fullName>US_Activities_Flag__c</fullName>
    <description>Flags that US Activities Amount &gt; $0.</description>
    <formula>US_Activities_Amount__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Flags that US Activities Amount &gt; $0.</inlineHelpText>
    <label>US Activities Flag</label>
    <type>Checkbox</type>
</CustomField>