unpackaged/main/default/objects/IndividualApplication/fields/Which_Year__c.field-meta.xml
<CustomField>
    <fullName>Which_Year__c</fullName>
    <label>Which Year?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Year 1</fullName>
            </value>
            <value>
                <fullName>Year 2</fullName>
            </value>
            <value>
                <fullName>Year 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>