unpackaged/main/default/objects/IndividualApplication/fields/X18_Char_ID__c.field-meta.xml
<CustomField>
    <fullName>X18_Char_ID__c</fullName>
    <description>Salesforce 18 character unique record ID</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Salesforce 18 character unique record ID</inlineHelpText>
    <label>18 Char ID</label>
    <type>Text</type>
</CustomField>