unpackaged/main/default/objects/IndividualApplication/fields/X990_Code__c.field-meta.xml
<CustomField>
    <fullName>X990_Code__c</fullName>
    <description>990 Code + Description</description>
    <inlineHelpText>This indicates how the grant will be reported on the IRS Form 990.</inlineHelpText>
    <label>990 Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>X990_Code</valueSetName>
    </valueSet>
</CustomField>