unpackaged/main/default/objects/IndividualApplication/fields/X990_Codex__c.field-meta.xml
<CustomField>
    <fullName>X990_Codex__c</fullName>
    <description>For reporting purposes, extracts the 990 code from the &quot;990 code + Description&quot; picklist field</description>
    <formula>MID( TEXT( X990_Code__c ) ,FIND(&quot;(&quot;,TEXT(X990_Code__c),1)+1,LEN(TEXT(X990_Code__c))-FIND(&quot;(&quot;,TEXT(X990_Code__c),1)-1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>For reporting purposes, extracts the 990 code from the &quot;990 code + Description&quot; picklist field</inlineHelpText>
    <label>990 Code</label>
    <type>Text</type>
</CustomField>