unpackaged/main/default/objects/IndividualApplication/fields/X990_Description__c.field-meta.xml
<CustomField>
    <fullName>X990_Description__c</fullName>
    <description>For reporting purposes, extracts the 990 description from the &quot;990 code + Description&quot; picklist field</description>
    <formula>LEFT(TEXT( X990_Code__c ),FIND(&quot;(&quot;,TEXT( X990_Code__c ),1)-2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>For reporting purposes, extracts the 990 description from the &quot;990 code + Description&quot; picklist field</inlineHelpText>
    <label>990 Description</label>
    <type>Text</type>
</CustomField>